--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.3"
   },
   "devDependencies": {
